--- a/index.html
+++ b/index.html
@@ -3,220 +3,263 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Araç Analiz</title>
+<title>Araç Analiz Sistemi</title>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <style>
-body{font-family:Arial;background:#0d47a1;color:white;text-align:center;padding:20px;}
-.box{background:white;color:black;padding:20px;border-radius:10px;max-width:500px;margin:auto;margin-top:20px;}
-input,button{padding:10px;width:100%;margin-top:10px;}
-button{background:#0d47a1;color:white;border:none;cursor:pointer;}
-.hidden{display:none;}
-.admin{background:#222;color:white;}
+body{
+    font-family: Arial;
+    background:#0d47a1;
+    color:white;
+    text-align:center;
+    padding:20px;
+}
+.box{
+    background:white;
+    color:black;
+    padding:20px;
+    border-radius:10px;
+    max-width:450px;
+    margin:auto;
+    margin-top:20px;
+}
+input,button{
+    padding:10px;
+    width:100%;
+    margin-top:10px;
+}
+button{
+    background:#0d47a1;
+    color:white;
+    border:none;
+    cursor:pointer;
+}
+.hidden{ display:none; }
+.admin{ background:#00000022; padding:15px; border-radius:10px; margin-top:15px;}
 </style>
 </head>
+
 <body>
 
-<h1>Araç Analiz Sistemi</h1>
+<h1>Araç Analiz</h1>
 
 <!-- AUTH -->
 <div class="box" id="authBox">
-<h3>Giriş</h3>
-<input type="email" id="email" placeholder="Email">
-<input type="password" id="password" placeholder="Şifre">
-<button onclick="register()">Kayıt Ol</button>
-<button onclick="login()">Giriş Yap</button>
-</div>
-
-<!-- TOS -->
-<div class="box hidden" id="tosBox">
-<h3>Kullanıcı Sözleşmesi</h3>
-<label><input type="checkbox" id="tosCheck"> Okudum kabul ediyorum</label>
-<button onclick="acceptTOS()">Devam</button>
+    <h3>Giriş / Kayıt</h3>
+    <input type="email" id="email" placeholder="Email">
+    <input type="password" id="password" placeholder="Şifre">
+    <button onclick="register()">Kayıt Ol</button>
+    <button onclick="login()">Giriş Yap</button>
 </div>
 
 <!-- USER PANEL -->
-<div class="box hidden" id="panel">
-<h3>Kullanıcı Paneli</h3>
+<div class="box hidden" id="userPanel">
+    <h3>Plaka Sorgu</h3>
+    <input type="text" id="plaka" placeholder="Plaka">
+    <button onclick="plakaSorgu()">Sorgula</button>
 
-<p><b>Üyelik:</b> <span id="uyelikDurum"></span></p>
-<p><b>Kalan Tek Sorgu:</b> <span id="hakSayisi"></span></p>
-<p><b>Üyelik Bitiş:</b> <span id="bitis"></span></p>
+    <hr>
 
-<hr>
+    <h3>Satın Alma</h3>
+    <button onclick="tekSorguAl()">30 TL Tek Sorgu</button>
+    <button onclick="uyelikAl()">Aylık Üyelik</button>
 
-<input id="plaka" placeholder="Plaka gir">
-<button onclick="plakaSorgu()">Plaka Sorgula</button>
+    <p id="durum"></p>
 
-<hr>
+    <button onclick="logout()">Çıkış Yap</button>
 
-<button onclick="tekSorgu()">30 TL Tek Sorgu</button>
-<button onclick="uyelik()">Aylık Üyelik</button>
+    <!-- ADMIN -->
+    <div id="adminPanel" class="admin hidden">
+        <h3>Admin Panel</h3>
+        <input type="email" id="adminEmail" placeholder="Kullanıcı Email">
 
-<button onclick="logout()">Çıkış</button>
-</div>
-
-<!-- ADMIN PANEL -->
-<div class="box admin hidden" id="adminPanel">
-<h3>Admin Panel</h3>
-<button onclick="kullanicilariGetir()">Kullanıcıları Listele</button>
-<div id="adminListe"></div>
+        <button onclick="makeAdmin()">Admin Yap</button>
+        <button onclick="uyelikVer()">1 Ay Üyelik Ver</button>
+        <button onclick="krediVer()">1 Sorgu Hakkı Ver</button>
+    </div>
 </div>
 
 <script>
-const SUPABASE_URL="https://lxuqpziqyrrwtzcksgwz.supabase.co";
-const SUPABASE_ANON_KEY="BURAYA_ANON_KEY";
+const SUPABASE_URL = "https://lxuqpziqyrrwtzcksgwz.supabase.co";
+const SUPABASE_ANON_KEY = "ANON_KEY_BURAYA";
 
 const { createClient } = supabase;
 const db = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-// ADMIN EMAIL
-const ADMIN_EMAIL="mslmcanlii@gmail.com";
-
-const emailEl=document.getElementById("email");
-const passwordEl=document.getElementById("password");
-const authBox=document.getElementById("authBox");
-const tosBox=document.getElementById("tosBox");
-const panel=document.getElementById("panel");
-const adminPanel=document.getElementById("adminPanel");
-
 async function register(){
-const { data, error } = await db.auth.signUp({
-email:emailEl.value,
-password:passwordEl.value
-});
-if(error)return alert(error.message);
+    const email = emailEl().value;
+    const password = passEl().value;
 
-await db.from("profiles").insert([
-{id:data.user.id,email:emailEl.value}
-]);
+    const { error } = await db.auth.signUp({ email, password });
 
-alert("Kaydınız başarıyla gerçekleşmiştir. Lütfen emailinizi doğrulayın.");
+    if(error) alert(error.message);
+    else alert("Kaydınız başarıyla gerçekleşmiştir. Lütfen emailinizi kontrol ediniz.");
 }
 
 async function login(){
-const { data, error } = await db.auth.signInWithPassword({
-email:emailEl.value,
-password:passwordEl.value
-});
-if(error)return alert(error.message);
+    const email = emailEl().value;
+    const password = passEl().value;
 
-const { data:profile } = await db
-.from("profiles").select("*")
-.eq("id",data.user.id).single();
+    const { data, error } = await db.auth.signInWithPassword({ email, password });
 
-authBox.classList.add("hidden");
+    if(error){ alert(error.message); return; }
+    if(!data.user.email_confirmed_at){ alert("Email doğrulanmamış!"); return; }
 
-if(!profile.tos_accepted){
-tosBox.classList.remove("hidden");
-return;
-}
+    authBox().classList.add("hidden");
+    userPanel().classList.remove("hidden");
 
-panel.classList.remove("hidden");
-kullaniciBilgiGoster(profile);
-
-// ADMIN KONTROL
-if(data.user.email===ADMIN_EMAIL){
-adminPanel.classList.remove("hidden");
-}
-}
-
-async function acceptTOS(){
-const { data:{user} } = await db.auth.getUser();
-await db.from("profiles").update({
-tos_accepted:true
-}).eq("id",user.id);
-
-tosBox.classList.add("hidden");
-panel.classList.remove("hidden");
-}
-
-function kullaniciBilgiGoster(profile){
-document.getElementById("uyelikDurum").innerText=profile.membership_status;
-document.getElementById("hakSayisi").innerText=profile.tek_sorgu_hak;
-document.getElementById("bitis").innerText=profile.membership_end || "-";
-}
-
-async function tekSorgu(){
-const { data:{user} } = await db.auth.getUser();
-
-const { data:profile } = await db
-.from("profiles").select("tek_sorgu_hak")
-.eq("id",user.id).single();
-
-await db.from("profiles").update({
-tek_sorgu_hak:(profile.tek_sorgu_hak||0)+1
-}).eq("id",user.id);
-
-alert("1 sorgu hakkı eklendi");
-}
-
-async function uyelik(){
-const { data:{user} } = await db.auth.getUser();
-const bitis=new Date();
-bitis.setMonth(bitis.getMonth()+1);
-
-await db.from("profiles").update({
-membership_status:"aktif",
-membership_end:bitis
-}).eq("id",user.id);
-
-alert("Üyelik aktif");
-}
-
-async function plakaSorgu(){
-const plaka=document.getElementById("plaka").value.toUpperCase();
-if(!plaka)return alert("Plaka gir");
-
-const { data:{user} } = await db.auth.getUser();
-const { data:profile } = await db
-.from("profiles").select("*")
-.eq("id",user.id).single();
-
-if(profile.membership_status==="aktif"){
-plakaApi(plaka);
-return;
-}
-
-if(profile.tek_sorgu_hak>0){
-await db.from("profiles").update({
-tek_sorgu_hak:profile.tek_sorgu_hak-1
-}).eq("id",user.id);
-
-plakaApi(plaka);
-return;
-}
-
-alert("Sorgu hakkınız yok");
-}
-
-// 🔥 BURAYA GERÇEK PLAKA API BAĞLANACAK
-async function plakaApi(plaka){
-alert("Plaka sorgu sonucu (demo): "+plaka);
-
-// ÖRNEK API BAĞLAMA ŞABLONU
-/*
-const res = await fetch("API_URL?plaka="+plaka);
-const data = await res.json();
-alert(JSON.stringify(data));
-*/
-}
-
-async function kullanicilariGetir(){
-const { data } = await db.from("profiles").select("*");
-
-let html="";
-data.forEach(u=>{
-html+=<p>${u.email} | Üyelik:${u.membership_status} | Hak:${u.tek_sorgu_hak}</p>;
-});
-document.getElementById("adminListe").innerHTML=html;
+    checkAdmin();
+    durumYaz();
 }
 
 async function logout(){
-await db.auth.signOut();
-location.reload();
+    await db.auth.signOut();
+    location.reload();
 }
+
+async function plakaSorgu(){
+    const { data:{user} } = await db.auth.getUser();
+    if(!user) return;
+
+    const { data:profile } = await db
+        .from("profiles")
+        .select("*")
+        .eq("id", user.id)
+        .single();
+
+    if(profile.membership_status==="aktif"){
+        alert("Plaka sonucu (üyelik)");
+        return;
+    }
+
+    if(profile.credit > 0){
+        await db.from("profiles")
+            .update({ credit: profile.credit-1 })
+            .eq("id", user.id);
+
+        alert("Plaka sonucu (tek sorgu)");
+        durumYaz();
+        return;
+    }
+
+    alert("Üyelik veya kredi gerekli");
+}
+
+async function tekSorguAl(){
+    const { data:{user} } = await db.auth.getUser();
+    if(!user) return;
+
+    const { data:profile } = await db
+        .from("profiles")
+        .select("credit")
+        .eq("id", user.id)
+        .single();
+
+    await db.from("profiles")
+        .update({ credit: (profile.credit||0)+1 })
+        .eq("id", user.id);
+
+    alert("1 sorgu hakkı eklendi (demo)");
+    durumYaz();
+}
+
+async function uyelikAl(){
+    const { data:{user} } = await db.auth.getUser();
+    if(!user) return;
+
+    const end = new Date();
+    end.setMonth(end.getMonth()+1);
+
+    await db.from("profiles").update({
+        membership_status:"aktif",
+        membership_end:end.toISOString()
+    }).eq("id", user.id);
+
+    alert("Üyelik aktif (demo)");
+    durumYaz();
+}
+
+async function durumYaz(){
+    const { data:{user} } = await db.auth.getUser();
+    const { data:profile } = await db
+        .from("profiles")
+        .select("*")
+        .eq("id", user.id)
+        .single();
+
+    document.getElementById("durum").innerHTML =
+        "Üyelik: "+profile.membership_status+
+        " | Kredi: "+(profile.credit||0);
+}
+
+async function checkAdmin(){
+    const { data:{user} } = await db.auth.getUser();
+    const { data } = await db
+        .from("profiles")
+        .select("is_admin")
+        .eq("id", user.id)
+        .single();
+
+    if(data && data.is_admin)
+        document.getElementById("adminPanel").classList.remove("hidden");
+}
+
+async function getUserByEmail(email){
+    const { data } = await db.from("profiles").select("id,email");
+    return data.find(x => x.email===email);
+}
+
+async function makeAdmin(){
+    const email = document.getElementById("adminEmail").value;
+    const u = await getUserByEmail(email);
+    if(!u) return alert("Bulunamadı");
+
+    await db.from("profiles")
+        .update({ is_admin:true })
+        .eq("id", u.id);
+
+    alert("Admin yapıldı");
+}
+
+async function uyelikVer(){
+    const email = document.getElementById("adminEmail").value;
+    const u = await getUserByEmail(email);
+    if(!u) return alert("Bulunamadı");
+
+    const end = new Date();
+    end.setMonth(end.getMonth()+1);
+
+    await db.from("profiles").update({
+        membership_status:"aktif",
+        membership_end:end.toISOString()
+    }).eq("id", u.id);
+
+    alert("Üyelik verildi");
+}
+
+async function krediVer(){
+    const email = document.getElementById("adminEmail").value;
+    const u = await getUserByEmail(email);
+    if(!u) return alert("Bulunamadı");
+
+    const { data:profile } = await db
+        .from("profiles")
+        .select("credit")
+        .eq("id", u.id)
+        .single();
+
+    await db.from("profiles")
+        .update({ credit:(profile.credit||0)+1 })
+        .eq("id", u.id);
+
+    alert("Kredi verildi");
+}
+
+function emailEl(){ return document.getElementById("email"); }
+function passEl(){ return document.getElementById("password"); }
+function authBox(){ return document.getElementById("authBox"); }
+function userPanel(){ return document.getElementById("userPanel"); }
 </script>
 
 </body>
