--- a/index.html
+++ b/index.html
@@ -68,14 +68,25 @@ const SUPABASE_ANON_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYm
 const { createClient } = supabase;
 const db=createClient(SUPABASE_URL,SUPABASE_ANON_KEY);
 
+// REGISTER
 async function register(){
 const email=emailEl().value;
 const password=passwordEl().value;
-const {error}=await db.auth.signUp({email,password});
-if(error) alert(error.message);
-else alert("Kayıt başarılı. Mailini onayla.");
+
+const { data, error } = await db.auth.signUp({email,password});
+if(error) return alert(error.message);
+
+// profil oluştur
+await db.from("profiles").insert({
+id:data.user.id,
+email:data.user.email,
+is_admin:false
+});
+
+alert("Kayıt başarılı. Mailini onayla.");
 }
 
+// LOGIN
 async function login(){
 const email=emailEl().value;
 const password=passwordEl().value;
@@ -88,6 +99,7 @@ showUser();
 checkAdmin();
 }
 
+// USER PANEL
 function showUser(){
 authBox().classList.add("hidden");
 userPanel().classList.remove("hidden");
@@ -98,19 +110,23 @@ await db.auth.signOut();
 location.reload();
 }
 
+// ADMIN CHECK
 async function checkAdmin(){
 const {data:{user}}=await db.auth.getUser();
 const {data}=await db.from("profiles").select("is_admin").eq("id",user.id).single();
 if(data?.is_admin) adminPanel().classList.remove("hidden");
 }
 
+// ADMIN VER
 async function makeAdmin(){
 const email=adminEmail().value;
-const {data}=await db.from("profiles").update({is_admin:true}).eq("email",email);
+
+await db.from("profiles").update({is_admin:true}).eq("email",email);
 alert("Admin yapıldı");
 await logYaz("admin yetki verdi");
 }
 
+// ARAÇ EKLE
 async function aracEkle(){
 await db.from("vehicles").insert({
 plaka:v_plaka.value.toUpperCase(),
@@ -124,11 +140,11 @@ alert("Araç kaydedildi");
 await logYaz("araç ekledi");
 }
 
+// PLAKA SORGU
 async function plakaSorgu(){
 const plaka=plakaEl().value.toUpperCase();
 
 const {data}=await db.from("vehicles").select("*").eq("plaka",plaka).single();
-
 if(!data) return alert("Araç bulunamadı");
 
 alert(
@@ -143,6 +159,7 @@ alert(
 await logYaz("plaka sorguladı");
 }
 
+// LOG YAZ
 async function logYaz(action){
 const {data:{user}}=await db.auth.getUser();
 await db.from("logs").insert({
@@ -152,6 +169,7 @@ action:action
 });
 }
 
+// LOG GÖSTER
 async function loglariGetir(){
 const {data}=await db.from("logs").select("*").order("created_at",{ascending:false}).limit(50);
 
