--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ button{background:#0d47a1;color:white;border:none;cursor:pointer}
 <script>
 
 const SUPABASE_URL="https://lxuqpziqyrrwtzcksgwz.supabase.co";
-const SUPABASE_ANON_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imx4dXFwemlxeXJyd3R6Y2tzZ3d6Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA1NDM4MzMsImV4cCI6MjA4NjExOTgzM30.WOwK1D4eDNyPxYOe7HUuwndgPFQgmdmCcRxWsfyTSps";
+const SUPABASE_ANON_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."; // senin key burada
 
 const { createClient } = supabase;
 const db=createClient(SUPABASE_URL,SUPABASE_ANON_KEY);
@@ -76,8 +76,8 @@ const password=passwordEl().value;
 const { data, error } = await db.auth.signUp({email,password});
 if(error) return alert(error.message);
 
-// profil oluştur
-await db.from("profiles").insert({
+// profil varsa geç
+await db.from("profiles").upsert({
 id:data.user.id,
 email:data.user.email,
 is_admin:false
@@ -96,7 +96,7 @@ if(error) return alert(error.message);
 if(!data.user.email_confirmed_at) return alert("Email doğrulanmamış");
 
 showUser();
-checkAdmin();
+await checkAdmin();
 }
 
 // USER PANEL
@@ -113,22 +113,26 @@ location.reload();
 // ADMIN CHECK
 async function checkAdmin(){
 const {data:{user}}=await db.auth.getUser();
-const {data}=await db.from("profiles").select("is_admin").eq("id",user.id).single();
+if(!user) return;
+
+const {data,error}=await db.from("profiles").select("is_admin").eq("id",user.id).single();
+if(error) return;
+
 if(data?.is_admin) adminPanel().classList.remove("hidden");
 }
 
 // ADMIN VER
 async function makeAdmin(){
 const email=adminEmail().value;
-
-await db.from("profiles").update({is_admin:true}).eq("email",email);
+const {error}=await db.from("profiles").update({is_admin:true}).eq("email",email);
+if(error) return alert(error.message);
 alert("Admin yapıldı");
 await logYaz("admin yetki verdi");
 }
 
 // ARAÇ EKLE
 async function aracEkle(){
-await db.from("vehicles").insert({
+const {error}=await db.from("vehicles").insert({
 plaka:v_plaka.value.toUpperCase(),
 marka:v_marka.value,
 model:v_model.value,
@@ -136,6 +140,8 @@ yil:v_yil.value,
 hasar:v_hasar.value,
 ekspertiz:v_ekspertiz.value
 });
+if(error) return alert(error.message);
+
 alert("Araç kaydedildi");
 await logYaz("araç ekledi");
 }
@@ -144,8 +150,8 @@ await logYaz("araç ekledi");
 async function plakaSorgu(){
 const plaka=plakaEl().value.toUpperCase();
 
-const {data}=await db.from("vehicles").select("*").eq("plaka",plaka).single();
-if(!data) return alert("Araç bulunamadı");
+const {data,error}=await db.from("vehicles").select("*").eq("plaka",plaka).single();
+if(error || !data) return alert("Araç bulunamadı");
 
 alert(
 "Plaka: "+data.plaka+
@@ -162,6 +168,8 @@ await logYaz("plaka sorguladı");
 // LOG YAZ
 async function logYaz(action){
 const {data:{user}}=await db.auth.getUser();
+if(!user) return;
+
 await db.from("logs").insert({
 user_id:user.id,
 email:user.email,
@@ -174,7 +182,7 @@ async function loglariGetir(){
 const {data}=await db.from("logs").select("*").order("created_at",{ascending:false}).limit(50);
 
 let html="";
-data.forEach(l=>{
+data?.forEach(l=>{
 html+=<p>${l.email} → ${l.action} (${l.created_at})</p>;
 });
 
