--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 
 <style>
 body{font-family:Arial;background:#0d47a1;color:white;text-align:center;padding:20px}
-.box{background:white;color:black;padding:20px;border-radius:10px;max-width:500px;margin:auto;margin-top:20px}
+.box{background:white;color:black;padding:20px;border-radius:10px;max-width:520px;margin:auto;margin-top:20px}
 input,button{padding:10px;width:100%;margin-top:10px}
 button{background:#0d47a1;color:white;border:none;cursor:pointer}
 .hidden{display:none}
 .report{background:#f5f5f5;padding:15px;border-radius:8px;margin-top:15px;text-align:left}
-.score{font-size:22px;font-weight:bold}
+.score{font-size:26px;font-weight:bold}
+.riskLow{color:green}
+.riskMid{color:#ff9800}
+.riskHigh{color:red}
 </style>
 </head>
 
@@ -32,8 +35,13 @@ button{background:#0d47a1;color:white;border:none;cursor:pointer}
 </div>
 
 <div class="box hidden" id="userPanel">
+
 <h3>Plaka Sorgu</h3>
 <input id="plaka" placeholder="Plaka">
+
+<button onclick="tekSorgu()">Tek Sorgu Satın Al (30 TL)</button>
+<button onclick="uyelikAl()">Aylık Üyelik Al</button>
+
 <button onclick="plakaSorgu()">Analiz Oluştur</button>
 <button onclick="logout()">Çıkış Yap</button>
 
@@ -49,7 +57,7 @@ button{background:#0d47a1;color:white;border:none;cursor:pointer}
 <input id="v_model" placeholder="Model">
 <input id="v_yil" placeholder="Yıl">
 <input id="v_km" placeholder="KM">
-<input id="v_ekspertiz" placeholder="Ekspertiz Notu">
+<input id="v_ekspertiz" placeholder="Ekspertiz">
 <button onclick="aracEkle()">Kaydet</button>
 
 </div>
@@ -63,17 +71,13 @@ const { createClient } = supabase;
 const db=createClient(SUPABASE_URL,SUPABASE_ANON_KEY);
 
 async function register(){
-const email=emailEl().value;
-const password=passwordEl().value;
-const {error}=await db.auth.signUp({email,password});
+const {error}=await db.auth.signUp({email:emailEl().value,password:passwordEl().value});
 if(error) alert(error.message);
-else alert("Kaydınız başarıyla gerçekleşmiştir. Lütfen emailinizi onaylayın.");
+else alert("Kaydınız başarıyla gerçekleşti. Emailinizi onaylayın.");
 }
 
 async function login(){
-const email=emailEl().value;
-const password=passwordEl().value;
-const {data,error}=await db.auth.signInWithPassword({email,password});
+const {data,error}=await db.auth.signInWithPassword({email:emailEl().value,password:passwordEl().value});
 if(error) return alert(error.message);
 if(!data.user.email_confirmed_at) return alert("Email doğrulanmamış");
 authBox().classList.add("hidden");
@@ -81,15 +85,26 @@ userPanel().classList.remove("hidden");
 checkAdmin();
 }
 
-async function logout(){
-await db.auth.signOut();
-location.reload();
-}
+async function logout(){await db.auth.signOut();location.reload();}
 
 async function checkAdmin(){
 const {data:{user}}=await db.auth.getUser();
 const {data}=await db.from("profiles").select("is_admin").eq("id",user.id).single();
 if(data?.is_admin) adminPanel().classList.remove("hidden");
+}
+
+async function tekSorgu(){
+const {data:{user}}=await db.auth.getUser();
+await db.from("profiles").update({query_right:1}).eq("id",user.id);
+alert("1 sorgu hakkı verildi");
+}
+
+async function uyelikAl(){
+const {data:{user}}=await db.auth.getUser();
+const bitis=new Date();
+bitis.setMonth(bitis.getMonth()+1);
+await db.from("profiles").update({membership_status:"aktif",membership_end:bitis}).eq("id",user.id);
+alert("Üyelik aktif");
 }
 
 async function aracEkle(){
@@ -105,62 +120,96 @@ alert("Araç kaydedildi");
 }
 
 async function plakaSorgu(){
+
+const {data:{user}}=await db.auth.getUser();
+const {data:profile}=await db.from("profiles").select("*").eq("id",user.id).single();
+
+if(profile.membership_status==="aktif" && new Date(profile.membership_end)>new Date()){
+}else if(profile.query_right>0){
+await db.from("profiles").update({query_right:profile.query_right-1}).eq("id",user.id);
+}else{
+alert("Sorgu hakkınız yok");
+return;
+}
+
 const plaka=plakaEl().value.toUpperCase();
 const {data}=await db.from("vehicles").select("*").eq("plaka",plaka).single();
 if(!data) return alert("Araç bulunamadı");
 
-const risk=hesaplaRisk(data);
-const kmSuphe=kmAnaliz(data.km,data.yil);
-const guven=guvenPuani(risk,kmSuphe);
+const analiz=aracAnalizMotoru(data);
 
 rapor().innerHTML=`
 <div class="report">
 <h3>ARAÇ ANALİZ RAPORU</h3>
 
-<b>Plaka:</b> ${data.plaka}<br>
-<b>Marka:</b> ${data.marka}<br>
-<b>Model:</b> ${data.model}<br>
-<b>Yıl:</b> ${data.yil}<br>
-<b>KM:</b> ${data.km}<br>
+Plaka: ${data.plaka}<br>
+Marka: ${data.marka}<br>
+Model: ${data.model}<br>
+Yıl: ${data.yil}<br>
+KM: ${data.km}<br>
 
 <hr>
 
-<b>Kilometre Analizi:</b> ${kmSuphe}<br>
-<b>Risk Skoru:</b> ${risk}/100<br>
-<b>Araç Güven Puanı:</b> <span class="score">${guven}</span>
+Risk Skoru: ${analiz.risk}/100<br>
+Araç Güven Puanı:
+<span class="score ${analiz.renk}">${analiz.guven}</span>
 
 <hr>
 
-<b>Ekspertiz Notu:</b><br>
-${data.ekspertiz}
+KM Analizi: ${analiz.km}<br>
+Yaş Etkisi: ${analiz.yas}<br>
+Ekspertiz Değerlendirme: ${analiz.ekspertiz}<br>
+
+<hr>
+
+<b>Sistem Yorumu:</b><br>
+${analiz.yorum}
 
 <br><br>
 <button onclick="pdfOlustur()">PDF İndir</button>
 </div>
 `;
-
-await logYaz("analiz oluşturdu");
 }
 
-function hesaplaRisk(data){
+function aracAnalizMotoru(data){
+
 let risk=0;
-if(data.yil<2015) risk+=30;
-if(data.km>200000) risk+=40;
-if(data.ekspertiz.includes("ağır")) risk+=30;
-return Math.min(risk,100);
+let yorum=[];
+
+// yaş
+const yas=2025-data.yil;
+if(yas>10){risk+=25;yorum.push("Araç yaşı yüksek");}
+else yorum.push("Yaş normal");
+
+// km
+const ort=15000*yas;
+let kmDurum="Normal";
+if(data.km>ort*1.5){risk+=30;kmDurum="KM yüksek";}
+if(data.km<ort*0.5){risk+=25;kmDurum="KM düşürülmüş olabilir";}
+
+// ekspertiz
+let ekspertiz="Normal";
+if(data.ekspertiz?.toLowerCase().includes("ağır")){
+risk+=40;
+ekspertiz="Ağır hasar kaydı mevcut";
 }
 
-function kmAnaliz(km,yil){
-const ort=15000*(2025-yil);
-if(km>ort*1.5) return "KM yüksek - dikkat";
-if(km<ort*0.5) return "KM düşük - şüpheli olabilir";
-return "Normal kullanım";
-}
+// güven puanı
+let guven=Math.max(100-risk,0);
 
-function guvenPuani(risk,km){
-let puan=100-risk;
-if(km.includes("şüpheli")) puan-=20;
-return Math.max(puan,0);
+let seviye="riskLow";
+if(guven<70) seviye="riskMid";
+if(guven<40) seviye="riskHigh";
+
+return{
+risk:risk,
+guven:guven,
+renk:seviye,
+km:kmDurum,
+yas: yas>10?"Yüksek risk":"Normal",
+ekspertiz:ekspertiz,
+yorum:yorum.join(", ")
+};
 }
 
 function pdfOlustur(){
@@ -169,15 +218,6 @@ const doc=new jsPDF();
 doc.text("ARAÇ ANALİZ RAPORU",20,20);
 doc.text(rapor().innerText,20,40);
 doc.save("arac_analiz.pdf");
-}
-
-async function logYaz(action){
-const {data:{user}}=await db.auth.getUser();
-await db.from("logs").insert({
-user_id:user.id,
-email:user.email,
-action:action
-});
 }
 
 // helpers
